# BNet

./: CMakeLists.txt  README.md  main.cpp
src/: BNet.cpp  BNet.cpp~  BNet.h
